depricate solution