@@ -47,7 +47,7 @@ public class Setting {
 	}
 
 	public static void printAll() {
-		if (new Boolean(get("debug_mode"))) {
+		if (Boolean.valueOf(get("debug_mode"))) {
 			for (Map.Entry<Object, Object> entry : properties.entrySet()) {
 				System.out.println("■ [" + entry.getKey() + "] :   " + entry.getValue());
 			}
